[build-system]
requires = ["setuptools", "numpy", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MDANSE"
version = "2.0.0b3"
description = 'MDANSE Core package - Molecular Dynamics trajectory handling and analysis code'
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["molecular dynamics", "science", "simulation", "analysis"]
authors = [
  {name = "Maciej Bartkowiak", email = "maciej.bartkowiak@stfc.ac.uk"},
  {name = "Chi Y. Cheng", email = "chi.cheng@stfc.ac.uk"}
]
maintainers = [
  {name = "Sanghamitra Mukhopadhyay", email = "sanghamitra.mukhopadhyay@stfc.ac.uk"}
]
classifiers = [
        'Development Status :: 4 - Beta',

        'Intended Audience :: Science/Research',
        'Topic :: Scientific/Engineering :: Chemistry',
        'Topic :: Scientific/Engineering :: Physics',

        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3 :: Only',
        'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
        'Operating System :: OS Independent'
]
dependencies = [
    "numpy",
    "scipy",
    "h5py",
    "ase",
    "rdkit",
    "MDAnalysis",
    "mdtraj",
    "networkx",
    "more-itertools",
]

# dynamic = ["version", "description"]

[project.urls]
homepage = "https://www.isis.stfc.ac.uk/Pages/MDANSEproject.aspx"
documentation = "https://mdanse.readthedocs.io/en/protos/"
repository = "https://github.com/ISISNeutronMuon/MDANSE"

[tool.setuptools]
package-dir = {"" = "Src"}
include-package-data = true

[tool.setuptools.package-data]
MDANSE = ["Chemistry/*.json",
          "Framework/*.json"]

[project.scripts]
mdanse = "MDANSE.Scripts.mdanse:main"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "Tests"
pythonpath = "Tests/CommonFunctions"
addopts = "--import-mode=importlib"
timeout = 240

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py39"
extend-exclude = [
    "Src/MDANSE/Framework/Jobs/RigidBodyTrajectory.py",
    "Src/MDANSE/MolecularDynamics/Trajectory.py",
]

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F",  # Defaults
    # "PL",  # Pylint errors
    # "E",   # Pycodestyle
    # "W",   # Pycodestyle warnings
    # "F",   # Pyflakes
    # "B",   # Flake8 bugbear
    # "SIM", # Flake8 Simplify
    # "A",   # Flake8 builtins
    # "COM", # Flake8 commas
    # "ISC", # Flake8 implicit string concat
    # "RSE", # Flake8 raise
    # "FA",  # Flake8 future
    # "FBT", # Flake8 boolean trap
    # "C4",  # Flake8 comprehensions
    # "Q",   # Flake8 Quotes
    # "RET", # Flake8 return
    # "ARG", # Flake8 unused args
    # "PTH", # Flake8 use pathlib
    # "I",   # Isort
    # "RUF", # Ruff specific
    # "FURB",# Refurb
    # "PERF",# Perflint
    # "D",   # Pydocstyle
    # "UP",  # Pyupgrade
]
ignore = [
    "F401",     # Unused import in init
    "E402",     # Import not at top
    "PLR0913",  # Too many arguments
    "PLR0912",  # Too many branches
    "PLR0915",  # Too many statements
]

# [tool.setuptools.packages.find]
# where = ["src"]
