[build-system]
requires = ["setuptools", "numpy", "wheel", "setuptools-git-versioning>=3.0,<4"]
build-backend = "setuptools.build_meta"

[project]
name = "MDANSE"
description = 'MDANSE Core package - Molecular Dynamics trajectory handling and analysis code'
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["molecular dynamics", "science", "simulation", "analysis"]
maintainers = [
  {name = "Maciej Bartkowiak", email = "maciej.bartkowiak@stfc.ac.uk"},
  {name = "Chi Y. Cheng", email = "chi.cheng@stfc.ac.uk"},
  {name = "Jacob Wilkins", email = "jacob.wilkins@stfc.ac.uk"}
]
classifiers = [
        'Development Status :: 5 - Production/Stable',

        'Intended Audience :: Science/Research',
        'Topic :: Scientific/Engineering :: Chemistry',
        'Topic :: Scientific/Engineering :: Physics',

        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Programming Language :: Python :: 3.13',
        'Programming Language :: Python :: 3 :: Only',
        'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
        'Operating System :: OS Independent'
]
dependencies = [
    "numpy",
    "scipy<=1.17.1",
    "h5py>=3.13",
    "ase",
    "rdkit>=2025.3.3",
    "MDAnalysis",
    "mdtraj",
    "networkx",
    "more-itertools",
    "typing_extensions",
    "setuptools-git-versioning>=3.0,<4",
]

[dependency-groups]
dev = [
  {include-group = "test"},
  {include-group = "lint"}
]
test=["pytest", "pytest-timeout"]
lint=["ruff<0.14"]

[project.optional-dependencies]
cli=["tqdm"]
extxyz=["extxyz"]

[project.urls]
homepage = "https://pypi.org/project/MDANSE"
documentation = "https://mdanse.readthedocs.io/"
repository = "https://github.com/ISISNeutronMuon/MDANSE"

[tool.setuptools]
package-dir = {"" = "Src"}
include-package-data = true

[tool.setuptools.package-data]
MDANSE = ["Chemistry/*.json",
          "Chemistry/*.csv",
          "Framework/*.json"]

[tool.setuptools-git-versioning]
enabled = true
starting_version = "2.0.1"

[project.scripts]
mdanse = "MDANSE.Scripts.mdanse:main"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "Tests"
pythonpath = "Tests/CommonFunctions"
addopts = "--import-mode=importlib"
timeout = 240
