[build-system]
requires = ["setuptools", "numpy", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MDANSE_GUI"
version = "1.0.0rc2"
description = 'MDANSE GUI package - the graphical interface for MDANSE'
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["molecular dynamics", "science", "simulation", "analysis"]
maintainers = [
  {name = "Maciej Bartkowiak", email = "maciej.bartkowiak@stfc.ac.uk"},
  {name = "Chi Y. Cheng", email = "chi.cheng@stfc.ac.uk"},
  {name = "Jacob Wilkins", email = "jacob.wilkins@stfc.ac.uk"}
]
classifiers = [
        'Development Status :: 4 - Beta',

        'Intended Audience :: Science/Research',
        'Topic :: Scientific/Engineering :: Chemistry',
        'Topic :: Scientific/Engineering :: Physics',
        'Topic :: Scientific/Engineering :: Visualization',

        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Programming Language :: Python :: 3.13',
        'Programming Language :: Python :: 3 :: Only',
        'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
        'Operating System :: OS Independent'
]
dependencies = [
    "MDANSE",
    "matplotlib",
    "qtpy",
    "vtk",
    "PyQt6<=6.7.0",
    "PyYAML",
    "tomlkit"
]

[project.optional-dependencies]
test=["pytest", "pytest-timeout", "pytest-qt"]
lint=["ruff<0.14"]

[project.urls]
homepage = "https://www.isis.stfc.ac.uk/Pages/MDANSEproject.aspx"
documentation = "https://mdanse.readthedocs.io/en/protos/"
repository = "https://github.com/ISISNeutronMuon/MDANSE"

[tool.setuptools]
package-dir = {"" = "Src"}
include-package-data = true

[tool.setuptools.package-data]
MDANSE_GUI = ["Icons/*.png", "Icons/*.ico",
              "Resources/*.toml", "Resources/*.png"]

[project.gui-scripts]
mdanse_elements_database = "MDANSE_GUI.Scripts.mdanse_elements_database:main"
mdanse_gui = "MDANSE_GUI.Scripts.mdanse_gui:main"
mdanse_periodic_table = "MDANSE_GUI.Scripts.mdanse_periodic_table:main"
mdanse_units_editor = "MDANSE_GUI.Scripts.mdanse_units_editor:main"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "Tests"
addopts = "--import-mode=importlib"
timeout = 240
qt_api = "pyqt6"